Fixed timeline offset on smaller screens

--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -1,17 +1,16 @@
-// body {
-//     width: auto;
-//     height: auto;
-//     padding-top: 10rem;
-//     padding-bottom: 10rem;
-//     background-color: rgb(255, 255, 255);
-// }
 
 .row {
-    //margin: auto;
-    margin-left: 20rem;
-    margin-right:20rem;
+    margin: auto;
+    //margin-left: 20rem;
+    //margin-right:20rem;
+
 }
 
+.outer {
+    justify-content: right;
+}
+
+/* Page title */
 h5 {
     padding-top: 2rem;
     text-align: center;
@@ -20,29 +19,57 @@ h5 {
     color: #3C4048;
 }
 
-// :root {
-//     --primary-color: #212121;
-//     --background-color: #111;
-//     --font: sans-serif;
-//   }
-  
-//   * {
-//     margin: 0px;
-//     padding: 0px;
-//   }
-  
+/* hr in cards */
+hr {
+    height: .3rem;
+    color: white;
+    background-color: white;
+    width: 50%;
+    opacity: 1;
+}
+
+/* hr at top of page */
+.hr2 {
+    height: .3rem;
+    border-style: solid;
+    color: #00ABB3;
+    background-color: #00ABB3;
+    width: 45%;
+    opacity: 1;
+    border-radius: 5px;
+}
+
+/* adjusts right hr right at top of page */
+.right-hr {
+    margin-left: 10%
+}
+
+.hr3 {
+    height: .3rem;
+    border-style: solid;
+    color: #00ABB3;
+    background-color: #00ABB3;
+    width: 33%;
+    opacity: 1;
+    margin: auto;
+    border-radius: 5px;
+}
+
+/* For languages/frameworks used text */
+span {
+    font-weight: 600;
+    font-size: 1.2rem;
+}
+
 body {
-    background: var(--background-color);
-    font-family: var(--font);
-    display: flex;
-    justify-content: center;
+    height:auto;
+    width: auto;
 }
 
 /* Timeline Container */
 .timeline {
-    background: var(--primary-color);
-    margin: 20px auto;
-    padding: 20px;
+    margin: 4rem auto;
+    padding: 1rem;
 }
 
 /* Card container */
@@ -50,16 +77,19 @@ body {
     border: 0;
     background-color: transparent;
     position: relative;
-    max-width: 400px;
+    max-width: 30rem;
+    min-width: 25rem;
 }
 
 /* setting padding based on even or odd */
 .card:nth-child(odd) {
-    padding: 30px 0 30px 30px;
+    padding: 2rem 0 2rem 2rem;
 }
+
 .card:nth-child(even) {
-    padding: 30px 30px 30px 0;
+    padding: 2rem 2rem 2rem 0;
 }
+
 /* Global ::before */
 .card::before {
     content: "";
@@ -88,8 +118,7 @@ body {
 
 /* Removing the border if it is the first card */
 .card:first-child::before {
-    border-top: 1;
-    border-top-left-radius: 0 50px 50px 0;
+    border-top-left-radius: 0 4.5rem 4.5rem 0;
 }
 
 /* Removing the border if it is the last card  and it's odd */
@@ -110,8 +139,8 @@ body {
     flex-direction: column;
     background: #3C4048;
     color: white;
-    border-radius: 10px;
-    padding: 10px;
+    border-radius: 0.7rem;
+    padding: 0.7rem;
 }
 
 /* Title of the card */
@@ -124,26 +153,36 @@ body {
 .title::before {
     content: "";
     position: absolute;
-    width: 20px;
-    height: 20px;
+    width: 1.2rem;
+    height: 1.2rem;
     background: white;
-    border-radius: 999px;
-    border: 5px solid #00ABB3;
+    border-radius: 100rem;
+    border: 0.3rem solid #00ABB3;
 }
 
-/* text right if the card is even  */
+/* title right if the card is even  */
 .card:nth-child(even) > .info > .title {
     text-align: right;
 }
 
+/* span right if the card is even  */
+.card:nth-child(even) > .info > span {
+    text-align: right;
+}
+
+/* span right if the card is even  */
+.card:nth-child(even) > .info > hr {
+    margin-left: 50%;
+}
+
 /* setting dot to the left if the card is odd */
 .card:nth-child(odd) > .info > .title::before {
-    left: -48px;
+    left: -3rem;
 }
 
 /* setting dot to the right if the card is odd */
 .card:nth-child(even) > .info > .title::before {
-    right: -48px;
+    right: -3rem;
 }
 /*--------------------------------------------------Card 2--------------------------------------------*\
 
@@ -158,7 +197,8 @@ body {
     border: 0;
     background-color: transparent;
     position: relative;
-    max-width: 400px;
+    max-width: 30rem;
+    min-width: 25rem;
 }
 
 /* Global ::before */
@@ -171,11 +211,12 @@ body {
 
 /* setting padding based on even or odd */
 .card2:nth-child(even) {
-    padding: 30px 0 30px 30px;
+    padding: 2rem 0 2rem 2rem;
 }
 .card2:nth-child(odd) {
-    padding: 30px 30px 30px 0;
+    padding: 2rem 2rem 2rem 0;
 }
+
 /* Setting the border of top, bottom, left */
 .card2:nth-child(even)::before {
     left: 0px;
@@ -194,29 +235,39 @@ body {
     border-radius: 0 50px 50px 0;
 }
 
-/* Removing the border if it is the last card  and it's odd */
+/* Removing the border if it is the last card  and it's even*/
 .card2:last-child:nth-child(even)::before {
     border-bottom: 0;
     border-bottom-left-radius: 0;
 }
 
-/* Removing the border if it is the last card  and it's even */
+/* Removing the border if it is the last card  and it's odd */
 .card2:last-child:nth-child(odd)::before {
     border-bottom: 0;
     border-bottom-right-radius: 0;
 }
 
-/* text right if the card is even  */
+/* text right if the card is odd  */
 .card2:nth-child(odd) > .info > .title {
     text-align: right;
 }
+
+/* text right if the card is odd  */
+.card2:nth-child(odd) > .info > span {
+    text-align: right;
+}
+
+/* hr right if the card is odd  */
+.card2:nth-child(odd) > .info > hr {
+    margin-left: 50%;
+}
     
-/* setting dot to the left if the card is odd */
+/* setting dot to the left if the card is even */
 .card2:nth-child(even) > .info > .title::before {
-    left: -48px;
+    left: -3rem;
 }
 
 /* setting dot to the right if the card is odd */
 .card2:nth-child(odd) > .info > .title::before {
-    right: -48px;
+    right: -3rem;
 }
